Defer "unwrapping" of JsonLiteral to a later point to retain bit of metadata for later point